--- a/config/discovery-server.yaml
+++ b/config/discovery-server.yaml
@@ -2,13 +2,11 @@ server:
   port: 8761
 
 eureka:
-  instance: 
-    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
-    serviceUrl:
-      defaultZone: http://discovery-server:8761/eureka
+    #serviceUrl:
+      #defaultZone: http://discovery-server:8761/eureka
       
 management:
   endpoints:
