--- a/config/discovery-server.yaml
+++ b/config/discovery-server.yaml
@@ -5,8 +5,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-    #serviceUrl:
-      #defaultZone: http://discovery-server:8761/eureka
+    service-url:
+      default-zone: http://discovery-server:8761/eureka
       
 management:
   endpoints:
