--- a/config/discovery-server.yaml
+++ b/config/discovery-server.yaml
@@ -6,7 +6,7 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      default-zone: http://discovery-server:8761/eureka
+      default-zone: http://localhost:8761/eureka
       
 management:
   endpoints:
