--- a/config/discovery-server.yaml
+++ b/config/discovery-server.yaml
@@ -8,15 +8,15 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      default-zone: http://localhost:8761/eureka
+      default-zone: http://discovery-server:8761/eureka
       
-management:
-  endpoints:
-    web:
-      exposure:
-        include:
-          - health
-  tracing:
-    sampling:
-      probability: 1.0
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include:
+#          - health
+#  tracing:
+#    sampling:
+#      probability: 1.0
       
