--- a/dev/user-service.yaml
+++ b/dev/user-service.yaml
@@ -21,6 +21,8 @@ spring:
     port: 5672
     username: user
     password: password
+  #zipkin:
+    #base-url: http://localhost:9411 
     
 resilience4j:
   circuitbreaker:
@@ -69,6 +71,9 @@ springdoc:
   show-actuator: true
    
 management:
+  #zipkin:
+    #tracing:
+      #endpoint: http://zipkin:9411/api/v2/spans
   endpoints:
     web:
       exposure:
@@ -77,8 +82,6 @@ management:
   tracing:
     sampling:
       probability: 1.0
-  #zipkin:
-    #base-url: http://localhost:9411 
 
 logging:
   level:
