--- a/test/discovery-server.yaml
+++ b/test/discovery-server.yaml
@@ -1,5 +1,11 @@
 server:
   port: 8761
+  
+spring:
+  security:
+    user:
+      name: eureka
+      password: password
 
 eureka:
   instance: 
@@ -8,7 +14,7 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@localhost:8761/eureka
       
 management:
   endpoints:
