--- a/test/user-service.yaml
+++ b/test/user-service.yaml
@@ -21,6 +21,8 @@ spring:
     port: 5672
     username: user
     password: password
+  #zipkin:
+    #base-url: http://localhost:9411 
     
 resilience4j:
   circuitbreaker:
@@ -49,7 +51,7 @@ resilience4j:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka:password@localhost:8761/eureka
 
 rabbitmq:
   exchange:
@@ -69,6 +71,9 @@ springdoc:
   show-actuator: true
    
 management:
+  #zipkin:
+    #tracing:
+      #endpoint: http://zipkin:9411/api/v2/spans
   endpoints:
     web:
       exposure:
@@ -77,9 +82,7 @@ management:
   tracing:
     sampling:
       probability: 1.0
-  #zipkin:
-    #base-url: http://localhost:9411 
-
+  
 logging:
   level:
     com:
